Closed Bug 1005030 Opened 10 years ago Closed 10 years ago

IonMonkey: Don't abort the analysis passes during funapply

Categories

(Core :: JavaScript Engine: JIT, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: h4writer, Assigned: h4writer)

References

Details

Attachments

(1 file)

There are now two analysis happening in IonMonkey: DefinitePropertyAnalysis and ArgumentUsageAnalysis. Both fail in raytrace due to funapply, while they shouldn't.
Attached patch PatchSplinter Review
Improves our raytrace score from 55000 to 78000, since we now run DefinitePropertiesAnalysis on raytrace.js:35
Assignee: nobody → hv1989
Attachment #8416471 - Flags: review?(bhackett1024)
Blocks: 1003825
Attachment #8416471 - Flags: review?(bhackett1024) → review+
https://hg.mozilla.org/mozilla-central/rev/f8497c9757f1
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in before you can comment on or make changes to this bug.