Bug 1005030: IonMonkey: Don't abort the analysis passes during funapply, r=bhackett